HelloUltraviolet/Fixtures/RejectedSource/Expressions/RaceOperandNonAsync/Expected.uv
//! Expected diagnostic metadata for the RaceOperandNonAsync rejected-source specimen.

expectedDiagnostic("E-CON-0261", "rule.21.Race-Operand-Err")
